--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+
+/* FONTS */
+
 @font-face {
     font-family: 'Lato R';
     src: url(/fonts/lato/Lato-Regular.ttf);
@@ -12,6 +15,10 @@
     font-family: 'Lato B';
     src: url(/fonts/lato/Lato-Bold.ttf);
 }
+
+/* FONTS */
+
+/* KEYFRAMES */
 
 @keyframes planeta 
 {
@@ -39,6 +46,9 @@
     }
 }
 
+/* KEYFRAMES */
+
+
 * {
     margin: 0;
     padding: 0;
@@ -55,6 +65,8 @@ main {
     height: 100vh;
 }
 
+/* SECCION 1 */
+
 .seccion-1 {
     background-color: rgb(14, 24, 44);
     color: rgb(252, 163, 17);
@@ -70,7 +82,7 @@ main {
     width: 400px;
     height: 400px;
     background: url(/img/tierraPNG.png);
-    background-color: rgb(14, 23, 44);
+    background-color: rgb(12, 21, 39);
     background-size: auto;
     border-radius: 50%;
     animation-name: planeta;
@@ -78,6 +90,8 @@ main {
     animation-timing-function: linear;
     animation-iteration-count: infinite;
 }
+
+/* SECCION 2 */
 
 .seccion-2 {
     background-color: rgb(8, 14, 26);
@@ -108,14 +122,21 @@ h2 {
     animation-duration: 5s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
-    border-radius: 44px;
-    min-height: 110px;
+    border-radius: 38px;
+    height: 12vh;
+    width: 100%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
 }
 
 p {
     font-size: 1.5em;
     font-family: 'Lato R';
 }
+
+/* SECCION 3 */
 
 .seccion-3 {
     background-color: black;
@@ -128,6 +149,8 @@ p {
     flex-direction: column;
 }
 
+/* SECCION 4 */
+
 .seccion-4 {
     background-color: rgb(229, 229, 229);
     color: rgb(14, 23, 44);
@@ -138,6 +161,83 @@ p {
     align-items: center;
     flex-direction: column;
 }
+
+.cards {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+}
+
+.card-1 {
+    width: 325px;
+    height: 225px;
+    border-radius: 15px;
+    background-color: rgb(14, 14, 14);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.card-1 div {
+    display: flex;    
+    justify-content: center;
+    align-items: center;
+    backface-visibility: hidden;
+    transition: 1s;
+}
+
+.card-1 .frente {
+    color: rgb(0, 129, 97);
+    transform: perspective(500px) rotateY(0deg);
+}
+
+.card-1 .reverso {
+    color: rgb(0, 129, 97);
+    transform: perspective(500px) rotateY(180deg);
+}
+
+.card-1:hover .frente {
+    color: rgb(0, 129, 97);
+    transform: perspective(500px) rotateY(180deg);
+}
+
+.card-1:hover .reverso {
+    color: rgb(0, 129, 97);
+    transform: perspective(500px) rotateY(360deg);
+}
+
+.card-2 {
+    width: 325px;
+    height: 225px;
+    border-radius: 15px;
+    background-color: rgb(14, 14, 14);
+    color: rgb(0, 129, 97);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+
+}
+
+.card-3 {
+    width: 325px;
+    height: 225px;
+    border-radius: 15px;
+    background-color: rgb(14, 14, 14);
+    color: rgb(0, 129, 97);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+
+}
+/* FOOTER */
 
 footer {
     background-color: rgb(229, 229, 229);
