--- a/index.css
+++ b/index.css
@@ -71,6 +71,7 @@ main {
     background-color: rgb(14, 24, 44);
     color: rgb(252, 163, 17);
     font-family: 'Lato R';
+    font-size: 1.5em;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -152,7 +153,7 @@ p {
 /* SECCION 4 */
 
 .seccion-4 {
-    background-color: rgb(229, 229, 229);
+    background-color: rgb(206, 206, 206);
     color: rgb(14, 23, 44);
     width: 100%;
     height: 100vh;
@@ -162,7 +163,9 @@ p {
     flex-direction: column;
 }
 
-.cards {
+/* TARJETAS */
+
+.tarjetas {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -170,82 +173,207 @@ p {
     flex-direction: row;
 }
 
-.card-1 {
-    width: 325px;
-    height: 225px;
-    border-radius: 15px;
-    background-color: rgb(14, 14, 14);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    cursor: pointer;
+
+.tamaño-tarjeta-visitante {
+    position: relative;
+    width: 500px;
+    height: 300px;
+    background: none;
 }
 
-.card-1 div {
-    display: flex;    
-    justify-content: center;
-    align-items: center;
-    backface-visibility: hidden;
-    transition: 1s;
-}
-
-.card-1 .frente {
-    color: rgb(0, 129, 97);
-    transform: perspective(500px) rotateY(0deg);
-}
-
-.card-1 .reverso {
-    color: rgb(0, 129, 97);
-    transform: perspective(500px) rotateY(180deg);
-}
-
-.card-1:hover .frente {
-    color: rgb(0, 129, 97);
-    transform: perspective(500px) rotateY(180deg);
-}
-
-.card-1:hover .reverso {
-    color: rgb(0, 129, 97);
-    transform: perspective(500px) rotateY(360deg);
-}
-
-.card-2 {
-    width: 325px;
-    height: 225px;
-    border-radius: 15px;
-    background-color: rgb(14, 14, 14);
-    color: rgb(0, 129, 97);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    cursor: pointer;
-
-}
-
-.card-3 {
-    width: 325px;
-    height: 225px;
-    border-radius: 15px;
-    background-color: rgb(14, 14, 14);
-    color: rgb(0, 129, 97);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    cursor: pointer;
-
-}
-/* FOOTER */
-
-footer {
-    background-color: rgb(229, 229, 229);
-    color: rgb(14, 23, 44);
+.tarjeta-visitante {
+    position: absolute;
     width: 100%;
-    height: 20vh;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition-property: all;
+    transition-duration: 1s;
+    transition-timing-function: ease;
+}
+
+.tarjeta-visitante:hover {
+    transform: rotateY(180deg);
+}
+
+.tarjeta-visitante-frente {
+    position: absolute;
+    display: flex;
+    justify-content: space-evenly;
+    align-items:center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(26, 26, 26);
+    color: rgb(50, 196, 147);
+    backface-visibility: hidden;
+    border-radius: 25px;
+    box-shadow: inset 0 -20px 20px -20px rgb(50, 196, 147);
+}
+
+.tarjeta-visitante-reverso {
+    position: absolute;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
+    width: 100%;
+    height: 100%;
+    border: 10px solid rgb(50, 196, 147);
+    border-radius: 25px;
+    background-color: rgb(20, 20, 20);
+    color: rgb(50, 196, 147);
+    backface-visibility: hidden;
+    transform: rotateY(180deg);
+}
+
+
+.tamaño-tarjeta-acaparador {
+    position: relative;
+    width: 500px;
+    height: 300px;
+    background: none;
+}
+
+.tarjeta-acaparador {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition-property: all;
+    transition-duration: 1s;
+    transition-timing-function: ease;
+}
+
+.tarjeta-acaparador:hover {
+    transform: rotateY(180deg);
+}
+
+.tarjeta-acaparador-frente {
+    position: absolute;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(26, 26, 26);
+    color: rgb(252, 163, 17);
+    backface-visibility: hidden;
+    border-radius: 25px;
+    box-shadow: inset 0 -20px 20px -20px rgb(252, 163, 17);
+}
+
+.tarjeta-acaparador-reverso {
+    position: absolute;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(20, 20, 20);
+    color: rgb(252, 163, 17);
+    backface-visibility: hidden;
+    transform: rotateY(180deg);
+    border-radius: 25px;
+    border: 10px solid rgb(252, 163, 17);
+    
+}
+
+.tamaño-tarjeta-coleccionista {
+    position: relative;
+    width: 500px;
+    height: 300px;
+    background: none;
+}
+
+.tarjeta-coleccionista {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition-property: all;
+    transition-duration: 1s;
+    transition-timing-function: ease;
+}
+
+.tarjeta-coleccionista:hover {
+    transform: rotateY(180deg);
+}
+
+.tarjeta-coleccionista-frente {
+    position: absolute;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(26, 26, 26);
+    color: rgb(199, 28, 28);
+    backface-visibility: hidden;
+    border-radius: 25px;
+    box-shadow: inset 0 -20px 20px -20px rgb(199, 28, 28);
+}
+
+.tarjeta-coleccionista-reverso {
+    position: absolute;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(20, 20, 20);
+    color: rgb(199, 28, 28);
+    backface-visibility: hidden;
+    transform: rotateY(180deg);
+    border-radius: 25px;
+    border: 10px solid rgb(199, 28, 28);
+}
+
+/* FOOTER */
+
+.seccion-5 {
+    background-color: rgb(229, 229, 229);
+    color: rgb(14, 23, 44);
+    width: 100%;
+    height: 40vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+}
+
+.seccion-5 h2 {
+    font-size: 2em;
+}
+
+.redes {
+    width: 50%;
+    height: 40%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+}
+
+.fa-facebook:hover {
+    color: rgb(59, 89, 152);
+    transition: all 0.5s ease;
+}
+
+.fa-instagram:hover {
+    color: #F56040;
+    transition: all 0.5s ease;
+}
+
+.fa-square-twitter:hover {
+    color: rgb(0, 172, 238);
+    transition: all 0.5s ease;
+}
+
+.fa-square-envelope:hover {
+    color: rgb(234, 67, 53);
+    transition: all 0.5s ease;
 }
