--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@ main {
 
 .seccion-1 {
     background-color: rgb(14, 24, 44);
-    color: rgb(252, 163, 17);
+    color: rgb(206, 206, 206);
     font-family: 'Lato R';
     font-size: 1.5em;
     width: 100%;
@@ -77,6 +77,10 @@ main {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+
+#world-books {
+    color: rgb(252, 163, 17);
 }
 
 .planeta-tierra {
@@ -347,6 +351,10 @@ p {
 
 .seccion-5 h2 {
     font-size: 2em;
+}
+
+.seccion-5 a {
+    ;
 }
 
 .redes {
